<resources>
    <string name="app_name">Recipes</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!--    Drawer options-->
    <string name="breakfast">Breakfast</string>
    <string name="deserts">Desserts</string>
    <string name="dinner">Dinner</string>
    <string name="drinks">Drinks</string>
    <string name="lunch">Lunch</string>
    <string name="soups">Soups</string>
    <string name="home">Home</string>
    <!--    Image data-->
    <string name="img_title">FavRecipes</string>
    <string name="img_description">All you need is love. But a little chocolate now and then doesn\'t hurt.</string>
    <string name="categories">Categories:</string>
    <!--    Drawer parameters-->
    <string name="nav_open_drawer">Open navigation drawer</string>
    <string name="nav_close_drawer">Close navigation drawer</string>
    <string name="sqlDrinks">SELECT recipe.id, recipe.name, recipe.duration, recipe.img FROM `recipe` INNER JOIN category WHERE recipe.id = category.recipe_id AND category.name = \'Drinks\'</string>
    <string name="duration">Duration:</string>
    <string name="ingredients">Ingredients: </string>
    <string name="cooking_process">Cooking process: </string>
    <string name="create_recipe">Create recipe </string>
    <string name="recipe_info">Detail information</string>
    <string name="add_icon_title">Create recipe</string>
    <string name="recipe_name">Recipe name:</string>
    <string name="select_category">Select Category</string>
    <string name="instructions">Instructions</string>
    <string name="your_instructions">Your instructions:</string>
    <string name="add">Add</string>
    <string name="ingredient_name">Ingredient name</string>
    <string name="quantity">Quantity</string>
    <string name="soup">Soup</string>
    <string name="dessert">Dessert</string>
    <string name="salads">Salads</string>
    <string name="search">Search</string>
    <string name="search_recipe">Search recipe</string>
</resources>
